// Это схема для gRPC коммуникации с Product-service
// Здесь мы описываем, какие методы можно вызывать и какие данные передавать

syntax = "proto3";  // Версия protobuf (самая современная)

package product;  // Имя пакета (как namespace в TypeScript)

// ============================================
// СЕРВИС: ProductService
// ============================================
// Это список методов, которые можно вызывать через gRPC
service ProductService {
  
  // Метод 1: Получить информацию об одном товаре
  // Используется когда добавляем товар в корзину
  rpc GetProduct (GetProductRequest) returns (GetProductResponse);
  
  // Метод 2: Получить информацию о нескольких товарах сразу
  // Используется когда показываем корзину с актуальными ценами
  rpc GetProductsByIds (GetProductsByIdsRequest) returns (GetProductsByIdsResponse);
  
  // Метод 3: Проверить наличие товара
  // Используется перед добавлением в корзину
  rpc CheckAvailability (CheckAvailabilityRequest) returns (CheckAvailabilityResponse);
}

// ============================================
// ЗАПРОС: Получить один товар
// ============================================
message GetProductRequest {
  int32 id = 1;  // ID товара (число)
  // Цифра "1" - это порядковый номер поля (обязательно в protobuf)
}

// ============================================
// ОТВЕТ: Информация о товаре
// ============================================
message GetProductResponse {
  int32 id = 1;           // ID товара
  string name = 2;        // Название товара
  double price = 3;       // Цена (используем double для дробных чисел)
  int32 stock = 4;        // Количество на складе
  string description = 5; // Описание товара
}

// ============================================
// ЗАПРОС: Получить несколько товаров
// ============================================
message GetProductsByIdsRequest {
  repeated int32 ids = 1;  // Массив ID товаров
  // "repeated" означает что это массив (список)
}

// ============================================
// ОТВЕТ: Список товаров
// ============================================
message GetProductsByIdsResponse {
  repeated GetProductResponse products = 1;  // Массив товаров
}

// ============================================
// ЗАПРОС: Проверить наличие товара
// ============================================
message CheckAvailabilityRequest {
  int32 productId = 1;  // ID товара
  int32 quantity = 2;   // Сколько штук нужно
}

// ============================================
// ОТВЕТ: Результат проверки наличия
// ============================================
message CheckAvailabilityResponse {
  bool available = 1;      // Есть ли товар в наличии (true/false)
  string message = 2;      // Сообщение (например: "Товар в наличии" или "Недостаточно товара")
  int32 availableStock = 3; // Сколько товара доступно на складе
  double price = 4;        // Актуальная цена товара
}
