import { Controller } from '@nestjs/common';
import { GrpcMethod } from '@nestjs/microservices';
import { ProductService } from './product.service';

// ============================================
// gRPC –ö–û–ù–¢–†–û–õ–õ–ï–† –¥–ª—è Product-service
// ============================================
// –≠—Ç–æ—Ç –∫–æ–Ω—Ç—Ä–æ–ª–ª–µ—Ä –æ–±—Ä–∞–±–∞—Ç—ã–≤–∞–µ—Ç gRPC –∑–∞–ø—Ä–æ—Å—ã –æ—Ç –¥—Ä—É–≥–∏—Ö –º–∏–∫—Ä–æ—Å–µ—Ä–≤–∏—Å–æ–≤
// –í –æ—Ç–ª–∏—á–∏–µ –æ—Ç –æ–±—ã—á–Ω–æ–≥–æ HTTP –∫–æ–Ω—Ç—Ä–æ–ª–ª–µ—Ä–∞, –∑–¥–µ—Å—å –∏—Å–ø–æ–ª—å–∑—É–µ—Ç—Å—è –¥–µ–∫–æ—Ä–∞—Ç–æ—Ä @GrpcMethod

@Controller()
export class ProductGrpcController {
  constructor(private readonly productService: ProductService) {}

  // ============================================
  // –ú–ï–¢–û–î 1: –ü–æ–ª—É—á–∏—Ç—å –æ–¥–∏–Ω —Ç–æ–≤–∞—Ä –ø–æ ID
  // ============================================
  // –í—ã–∑—ã–≤–∞–µ—Ç—Å—è –∫–æ–≥–¥–∞ cart-service —Ö–æ—á–µ—Ç –ø—Ä–æ–≤–µ—Ä–∏—Ç—å —Ç–æ–≤–∞—Ä –ø–µ—Ä–µ–¥ –¥–æ–±–∞–≤–ª–µ–Ω–∏–µ–º –≤ –∫–æ—Ä–∑–∏–Ω—É
  @GrpcMethod('ProductService', 'GetProduct')
  async getProduct(data: { id: number }) {
    console.log('üì• [gRPC] –ü–æ–ª—É—á–µ–Ω –∑–∞–ø—Ä–æ—Å GetProduct:', data);

    // –ü–æ–ª—É—á–∞–µ–º —Ç–æ–≤–∞—Ä –∏–∑ –±–∞–∑—ã –¥–∞–Ω–Ω—ã—Ö
    const product = await this.productService.findById(data.id);

    // –í–æ–∑–≤—Ä–∞—â–∞–µ–º –¥–∞–Ω–Ω—ã–µ –≤ —Ñ–æ—Ä–º–∞—Ç–µ, –æ–ø–∏—Å–∞–Ω–Ω–æ–º –≤ .proto —Ñ–∞–π–ª–µ
    const response = {
      id: product.id,
      name: product.name,
      price: product.price,
      stock: product.stock,
    };

    console.log('üì§ [gRPC] –û—Ç–ø—Ä–∞–≤–ª—è—é –æ—Ç–≤–µ—Ç GetProduct:', response);
    return response;
  }

  // ============================================
  // –ú–ï–¢–û–î 2: –ü–æ–ª—É—á–∏—Ç—å –Ω–µ—Å–∫–æ–ª—å–∫–æ —Ç–æ–≤–∞—Ä–æ–≤ –ø–æ –º–∞—Å—Å–∏–≤—É ID
  // ============================================
  // –í—ã–∑—ã–≤–∞–µ—Ç—Å—è –∫–æ–≥–¥–∞ cart-service —Ö–æ—á–µ—Ç –ø–æ–∫–∞–∑–∞—Ç—å –∫–æ—Ä–∑–∏–Ω—É —Å –∞–∫—Ç—É–∞–ª—å–Ω—ã–º–∏ —Ü–µ–Ω–∞–º–∏
  @GrpcMethod('ProductService', 'GetProductsByIds')
  async getProductsByIds(data: { ids: number[] }) {
    console.log('üì• [gRPC] –ü–æ–ª—É—á–µ–Ω –∑–∞–ø—Ä–æ—Å GetProductsByIds:', data);

    // –ü–æ–ª—É—á–∞–µ–º –≤—Å–µ —Ç–æ–≤–∞—Ä—ã –∏–∑ –±–∞–∑—ã –¥–∞–Ω–Ω—ã—Ö
    // TODO: –û–ø—Ç–∏–º–∏–∑–∏—Ä–æ–≤–∞—Ç—å - —Å–¥–µ–ª–∞—Ç—å –æ–¥–∏–Ω –∑–∞–ø—Ä–æ—Å –≤–º–µ—Å—Ç–æ –Ω–µ—Å–∫–æ–ª—å–∫–∏—Ö
    const products = await Promise.all(
      data.ids.map((id) => this.productService.findById(id)),
    );

    // –§–æ—Ä–º–∏—Ä—É–µ–º –æ—Ç–≤–µ—Ç
    const response = {
      products: products.map((product) => ({
        id: product.id,
        name: product.name,
        price: product.price,
        stock: product.stock,
      })),
    };

    console.log('üì§ [gRPC] –û—Ç–ø—Ä–∞–≤–ª—è—é –æ—Ç–≤–µ—Ç GetProductsByIds:', response);
    return response;
  }

  // ============================================
  // –ú–ï–¢–û–î 3: –ü—Ä–æ–≤–µ—Ä–∏—Ç—å –Ω–∞–ª–∏—á–∏–µ —Ç–æ–≤–∞—Ä–∞
  // ============================================
  // –í—ã–∑—ã–≤–∞–µ—Ç—Å—è –ø–µ—Ä–µ–¥ –¥–æ–±–∞–≤–ª–µ–Ω–∏–µ–º —Ç–æ–≤–∞—Ä–∞ –≤ –∫–æ—Ä–∑–∏–Ω—É
  // –ü—Ä–æ–≤–µ—Ä—è–µ—Ç: —Å—É—â–µ—Å—Ç–≤—É–µ—Ç –ª–∏ —Ç–æ–≤–∞—Ä –∏ –¥–æ—Å—Ç–∞—Ç–æ—á–Ω–æ –ª–∏ –µ–≥–æ –Ω–∞ —Å–∫–ª–∞–¥–µ
  @GrpcMethod('ProductService', 'CheckAvailability')
  async checkAvailability(data: { productId: number; quantity: number }) {
    console.log('üì• [gRPC] –ü–æ–ª—É—á–µ–Ω –∑–∞–ø—Ä–æ—Å CheckAvailability:', data);

    // –ò—Å–ø–æ–ª—å–∑—É–µ–º —Å—É—â–µ—Å—Ç–≤—É—é—â–∏–π –º–µ—Ç–æ–¥ –∏–∑ ProductService
    const result = await this.productService.checkAvailability(
      data.productId,
      data.quantity,
    );

    // –§–æ—Ä–º–∏—Ä—É–µ–º –æ—Ç–≤–µ—Ç –≤ –∑–∞–≤–∏—Å–∏–º–æ—Å—Ç–∏ –æ—Ç —Ä–µ–∑—É–ª—å—Ç–∞—Ç–∞ –ø—Ä–æ–≤–µ—Ä–∫–∏
    if (result.available && result.product) {
      const response = {
        available: true,
        message: '–¢–æ–≤–∞—Ä –¥–æ—Å—Ç—É–ø–µ–Ω',
        availableStock: result.product.stock,
        price: result.product.price,
      };
      console.log('üì§ [gRPC] –¢–æ–≤–∞—Ä –¥–æ—Å—Ç—É–ø–µ–Ω:', response);
      return response;
    } else {
      const response = {
        available: false,
        message: result.error || '–¢–æ–≤–∞—Ä –Ω–µ–¥–æ—Å—Ç—É–ø–µ–Ω',
        availableStock: 0,
        price: 0,
      };
      console.log('üì§ [gRPC] –¢–æ–≤–∞—Ä –Ω–µ–¥–æ—Å—Ç—É–ø–µ–Ω:', response);
      return response;
    }
  }
}
